--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -2,6 +2,14 @@
 
 <% @blog_posts.each do |blog_post| %>
     <div> 
+                <% if current_user %>
+                <div> <%= link_to "Edit", edit_blog_post_path(blog_post) %> </div>
+            <% end %>
+        <% if blog_post.draft? %>
+            <div class="p-2-rounded bg-gray-100 text-gray-900">Draft</div>
+        <% elsif blog_post.scheduled? %>
+            <div class="p-2-rounded bg-blue-100 text-blue-900">Scheduled</div>
+        <% end %>
         <h2><%= link_to blog_post.title, blog_post %></h2>
         <p><%= blog_post.body %> </p>
     </div>
