--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -20,6 +20,10 @@
   <%= f.text_area :body %>
 </div>
 <div>
+  <%= f.datetime_select :published_at, include_blank: true %>
+</div>
+
+<div>
   <%= f.submit %>
 </div>
 <% end %>
