--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -17,7 +17,7 @@
   <%= f.text_field :title %>
 </div>
 <div>
-  <%= f.text_area :body %>
+  <%= f.rich_text_area :body %>
 </div>
 <div>
   <%= f.datetime_select :published_at, include_blank: true %>
