--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -1,2 +1,3 @@
-<%= button_to "Edit", edit_blog_post_path(@blog_post) if user_signed_in? %>
+<div> <%= link_to "Edit", edit_blog_post_path(@blog_post.id) if user_signed_in? %> </div>
 <%= @blog_post.title %>
+<%= @blog_post.body %>
